# lego-warp

./: CMakeLists.txt  LICENSE  README.md  contours.cpp  lego-detect.cpp  squares.cpp
src/: contours.cpp  lego-detect.cpp  sched-read.cpp  squares.cpp
